--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -25,6 +25,7 @@ secondary = #8ABEB7
 alert = #A54242
 blue = #81A2BE
 green = #B5BD68
+mint-green = #98FB98
 yellow = #F0C674
 purple = #B294BB
 cyan = #8ABEB7
@@ -53,12 +54,12 @@ module-margin = 1
 
 separator-foreground = ${colors.disabled}
 
-; font-0 = monospace;2
-font-0 = IntoneMonoNerdFont:size=10;2
+font-0 = monospace;2
+font-1 = IntoneMonoNerdFont;2
 
 modules-left = xworkspaces
 modules-center = date
-modules-right = pulseaudio battery memory cpu
+modules-right = network volume battery memory cpu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -92,37 +93,27 @@ label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
 
-[module/pulseaudio]
-type = internal/pulseaudio
-interval = 5
-use-ui-max = true
+[module/volume]
+type = internal/alsa
+interval = 2
+
 label-volume = %percentage%%
-label-muted-foreground = ${colors.yellow}
 label-muted = " 0%"
-; label-muted-foreground = ${colors.background-alt}
+
 format-volume = <ramp-volume> <label-volume>
-ramp-volume-0 = "🔈"
-ramp-volume-1 = "🔉"
-ramp-volume-2 = "🔊"
+ramp-volume-0 = 󰖀
+ramp-volume-1 = 󰕾
+label-muted-foreground = ${colors.alert}
+
+ramp-headphones-0 = 
+ramp-headphones-1 = 
 
 click-right = pavucontrol
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = 󰍛
+format-prefix = 
 format-prefix-padding = 1
 format-prefix-foreground = ${colors.purple}
 label = %percentage_used:2%%
@@ -130,7 +121,7 @@ label = %percentage_used:2%%
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = 
+format-prefix = 󰍛
 format-prefix-padding = 1
 format-prefix-foreground = ${colors.blue}
 label = %percentage:2%%
@@ -166,9 +157,9 @@ ramp-capacity-4 = 
 
 ramp-capacity-0-foreground = ${colors.alert}
 ramp-capacity-1-foreground = ${colors.yellow}
-ramp-capacity-2-foreground = ${colors.green}
-ramp-capacity-3-foreground = ${colors.green}
-ramp-capacity-4-foreground = ${colors.green}
+ramp-capacity-2-foreground = ${colors.mint-green}
+ramp-capacity-3-foreground = ${colors.mint-green}
+ramp-capacity-4-foreground = ${colors.mint-green}
 
 low-at = 10 
 label-low = %percentage%%
@@ -189,12 +180,20 @@ label-foreground = ${colors.primary}
 [module/network]
 type = internal/network
 
-interface = wlan1
-interface-type = wireless
+; interface = wlan1
+interface = enp0s3
+; interface-type = wireless
+interface-type = wired
 internal = 3
 
-udspeed-minwidth = 5
-accumulate-stats = true
+label-connected = 󰖩 %downspeed:1%
+label-disconnected = 󱚵
+
+format-connected = <label-connected>
+format-disconnected = <label-disconnected>
+
+label-connected-foreground = ${colors.green}
+label-disconnected-foreground = ${colors.alert}
 
 [settings]
 screenchange-reload = true
