update polybar config file.

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -93,6 +93,7 @@ label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
 
+
 [module/volume]
 type = internal/alsa
 interval = 2
@@ -164,7 +165,7 @@ ramp-capacity-4-foreground = ${colors.mint-green}
 low-at = 10 
 label-low = %percentage%%
 format-low = <animation-low> <label-low> 
-format-low-padding = 1
+animation-low-padding = 1
 animation-low-0 = 
 animation-low-1 = 
 animation-low-foreground = ${colors.alert}
