--- a/i3/config
+++ b/i3/config
@@ -591,9 +591,15 @@ bindsym $mod+t exec rofi -show window \
 #bindsym $mod+c exec --no-startup-id rofi -modi "clipboard:greenclip print" -show clipboard \
 #		-config ~/.config/rofi/rofidmenu.rasi
 
+# auto launch polybar 
 exec_always .config/polybar/launch.sh &
 
+# set window resize key
 bindsym $mod+Ctrl+Right resize shrink width 1 px or 1 ppt
 bindsym $mod+Ctrl+Up resize grow height 1 px or 1 ppt
 bindsym $mod+Ctrl+Down resize shrink height 1 px or 1 ppt
 bindsym $mod+Ctrl+Left resize grow width 1 px or 1 ppt
+
+# set scratchpad key
+bindsym $mod+minus scratchpad show
+bindsym $mod+Shift+minus move scratchpad
