--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -167,8 +167,8 @@ label-low = %percentage%%
 format-low = <animation-low> <label-low> 
 animation-low-padding = 1
 animation-low-0 = 
-animation-low-1 = 
-animation-low-foreground = ${colors.alert}
+animation-low-1 = " "
+animation-low-foreground = ${colors.orange-red}
 animation-low-framerate = 200
 
 [module/date]
